policy-management/policies/disallow-host-namespaces/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-namespaces
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
